fix alignment

--- a/assets/css.css
+++ b/assets/css.css
@@ -42,6 +42,7 @@ h1 {
 #subscribe-text {
     font-size: 20px;
     letter-spacing: 3px;
+    text-align: center;
 
 }
 
